valor de dolar en  el scraper

--- a/scraperv2.ipynb
+++ b/scraperv2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,20 +104,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Se genera un df para almacenar los resultados\n",
     "dftotal = pd.DataFrame(columns=['subtitulo', 'item', 'asignacion', 'n_asignacion', 'glosa',\n",
-    "       'moneda_nacional_ms', 'moneda_internacional_musd', 'n_subtitulo',\n",
+    "       'moneda_nacional_ms', 'moneda_inter_musd', 'n_subtitulo',\n",
     "       'n_item', 'partida', 'n_partida', 'capitulo', 'n_capitulo', 'programa',\n",
     "       'n_programa'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,370 +265,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>subtitulo</th>\n",
-       "      <th>item</th>\n",
-       "      <th>asignacion</th>\n",
-       "      <th>n_asignacion</th>\n",
-       "      <th>glosa</th>\n",
-       "      <th>moneda_nacional_ms</th>\n",
-       "      <th>moneda_internacional_musd</th>\n",
-       "      <th>n_subtitulo</th>\n",
-       "      <th>n_item</th>\n",
-       "      <th>partida</th>\n",
-       "      <th>n_partida</th>\n",
-       "      <th>capitulo</th>\n",
-       "      <th>n_capitulo</th>\n",
-       "      <th>programa</th>\n",
-       "      <th>n_programa</th>\n",
-       "      <th>moneda_inter_musd</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>07</td>\n",
-       "      <td>02</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.220</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>INGRESOS DE OPERACIÓN</td>\n",
-       "      <td>Venta de Servicios</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>MINISTERIO DE JUSTICIA Y DERECHOS HUMANOS</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Servicio Médico Legal</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Servicio Médico Legal (01)</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>08</td>\n",
-       "      <td>01</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>10</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>OTROS INGRESOS CORRIENTES</td>\n",
-       "      <td>Recuperaciones y Reembolsos por Licencias Médicas</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>MINISTERIO DE JUSTICIA Y DERECHOS HUMANOS</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Servicio Médico Legal</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Servicio Médico Legal (01)</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>08</td>\n",
-       "      <td>02</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.135</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>OTROS INGRESOS CORRIENTES</td>\n",
-       "      <td>Multas y Sanciones Pecuniarias</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>MINISTERIO DE JUSTICIA Y DERECHOS HUMANOS</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Servicio Médico Legal</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Servicio Médico Legal (01)</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>08</td>\n",
-       "      <td>99</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>51.484</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>OTROS INGRESOS CORRIENTES</td>\n",
-       "      <td>Otros</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>MINISTERIO DE JUSTICIA Y DERECHOS HUMANOS</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Servicio Médico Legal</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Servicio Médico Legal (01)</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>09</td>\n",
-       "      <td>01</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>51.985.281</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>APORTE FISCAL</td>\n",
-       "      <td>Libre</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>MINISTERIO DE JUSTICIA Y DERECHOS HUMANOS</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Servicio Médico Legal</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Servicio Médico Legal (01)</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>24</td>\n",
-       "      <td>07</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>Cuotas a Organismos Internacionales</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>28.912</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>TRANSFERENCIAS CORRIENTES</td>\n",
-       "      <td>A Organismos Internacionales</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>MINISTERIO DE JUSTICIA Y DERECHOS HUMANOS</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Secretaría y Administración General</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Secretaría y Administración General (01, 10)</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>25</td>\n",
-       "      <td>99</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>10</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>INTEGROS AL FISCO</td>\n",
-       "      <td>Otros Integros al Fisco</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>MINISTERIO DE JUSTICIA Y DERECHOS HUMANOS</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Secretaría y Administración General</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Secretaría y Administración General (01, 10)</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>29</td>\n",
-       "      <td>07</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>35.253</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ADQUISICIÓN DE ACTIVOS NO FINANCIEROS</td>\n",
-       "      <td>Programas Informáticos</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>MINISTERIO DE JUSTICIA Y DERECHOS HUMANOS</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Secretaría y Administración General</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Secretaría y Administración General (01, 10)</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>31</td>\n",
-       "      <td>02</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>48.104.300</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>INICIATIVAS DE INVERSIÓN</td>\n",
-       "      <td>Proyectos</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>MINISTERIO DE JUSTICIA Y DERECHOS HUMANOS</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Secretaría y Administración General</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Secretaría y Administración General (01, 10)</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>34</td>\n",
-       "      <td>07</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>10</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>SERVICIO DE LA DEUDA</td>\n",
-       "      <td>Deuda Flotante</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>MINISTERIO DE JUSTICIA Y DERECHOS HUMANOS</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Secretaría y Administración General</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Secretaría y Administración General (01, 10)</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>6630 rows × 16 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   subtitulo item  asignacion                         n_asignacion glosa  \\\n",
-       "1         07   02         0.0                                    -   NaN   \n",
-       "2         08   01         0.0                                    -   NaN   \n",
-       "3         08   02         0.0                                    -   NaN   \n",
-       "4         08   99         0.0                                    -   NaN   \n",
-       "5         09   01         0.0                                    -   NaN   \n",
-       "..       ...  ...         ...                                  ...   ...   \n",
-       "23        24   07        11.0  Cuotas a Organismos Internacionales   NaN   \n",
-       "24        25   99         0.0                                    -   NaN   \n",
-       "25        29   07         0.0                                    -   NaN   \n",
-       "26        31   02         0.0                                    -   NaN   \n",
-       "27        34   07         0.0                                    -   NaN   \n",
-       "\n",
-       "   moneda_nacional_ms moneda_internacional_musd  \\\n",
-       "1               2.220                       NaN   \n",
-       "2                  10                       NaN   \n",
-       "3               1.135                       NaN   \n",
-       "4              51.484                       NaN   \n",
-       "5          51.985.281                       NaN   \n",
-       "..                ...                       ...   \n",
-       "23             28.912                       NaN   \n",
-       "24                 10                       NaN   \n",
-       "25             35.253                       NaN   \n",
-       "26         48.104.300                       NaN   \n",
-       "27                 10                       NaN   \n",
-       "\n",
-       "                              n_subtitulo  \\\n",
-       "1                   INGRESOS DE OPERACIÓN   \n",
-       "2               OTROS INGRESOS CORRIENTES   \n",
-       "3               OTROS INGRESOS CORRIENTES   \n",
-       "4               OTROS INGRESOS CORRIENTES   \n",
-       "5                           APORTE FISCAL   \n",
-       "..                                    ...   \n",
-       "23              TRANSFERENCIAS CORRIENTES   \n",
-       "24                      INTEGROS AL FISCO   \n",
-       "25  ADQUISICIÓN DE ACTIVOS NO FINANCIEROS   \n",
-       "26               INICIATIVAS DE INVERSIÓN   \n",
-       "27                   SERVICIO DE LA DEUDA   \n",
-       "\n",
-       "                                               n_item  partida  \\\n",
-       "1                                  Venta de Servicios     10.0   \n",
-       "2   Recuperaciones y Reembolsos por Licencias Médicas     10.0   \n",
-       "3                      Multas y Sanciones Pecuniarias     10.0   \n",
-       "4                                               Otros     10.0   \n",
-       "5                                               Libre     10.0   \n",
-       "..                                                ...      ...   \n",
-       "23                       A Organismos Internacionales     10.0   \n",
-       "24                            Otros Integros al Fisco     10.0   \n",
-       "25                             Programas Informáticos     10.0   \n",
-       "26                                          Proyectos     10.0   \n",
-       "27                                     Deuda Flotante     10.0   \n",
-       "\n",
-       "                                    n_partida  capitulo  \\\n",
-       "1   MINISTERIO DE JUSTICIA Y DERECHOS HUMANOS       3.0   \n",
-       "2   MINISTERIO DE JUSTICIA Y DERECHOS HUMANOS       3.0   \n",
-       "3   MINISTERIO DE JUSTICIA Y DERECHOS HUMANOS       3.0   \n",
-       "4   MINISTERIO DE JUSTICIA Y DERECHOS HUMANOS       3.0   \n",
-       "5   MINISTERIO DE JUSTICIA Y DERECHOS HUMANOS       3.0   \n",
-       "..                                        ...       ...   \n",
-       "23  MINISTERIO DE JUSTICIA Y DERECHOS HUMANOS       1.0   \n",
-       "24  MINISTERIO DE JUSTICIA Y DERECHOS HUMANOS       1.0   \n",
-       "25  MINISTERIO DE JUSTICIA Y DERECHOS HUMANOS       1.0   \n",
-       "26  MINISTERIO DE JUSTICIA Y DERECHOS HUMANOS       1.0   \n",
-       "27  MINISTERIO DE JUSTICIA Y DERECHOS HUMANOS       1.0   \n",
-       "\n",
-       "                             n_capitulo  programa  \\\n",
-       "1                 Servicio Médico Legal       1.0   \n",
-       "2                 Servicio Médico Legal       1.0   \n",
-       "3                 Servicio Médico Legal       1.0   \n",
-       "4                 Servicio Médico Legal       1.0   \n",
-       "5                 Servicio Médico Legal       1.0   \n",
-       "..                                  ...       ...   \n",
-       "23  Secretaría y Administración General       1.0   \n",
-       "24  Secretaría y Administración General       1.0   \n",
-       "25  Secretaría y Administración General       1.0   \n",
-       "26  Secretaría y Administración General       1.0   \n",
-       "27  Secretaría y Administración General       1.0   \n",
-       "\n",
-       "                                      n_programa moneda_inter_musd  \n",
-       "1                     Servicio Médico Legal (01)               NaN  \n",
-       "2                     Servicio Médico Legal (01)               NaN  \n",
-       "3                     Servicio Médico Legal (01)               NaN  \n",
-       "4                     Servicio Médico Legal (01)               NaN  \n",
-       "5                     Servicio Médico Legal (01)               NaN  \n",
-       "..                                           ...               ...  \n",
-       "23  Secretaría y Administración General (01, 10)               NaN  \n",
-       "24  Secretaría y Administración General (01, 10)               NaN  \n",
-       "25  Secretaría y Administración General (01, 10)               NaN  \n",
-       "26  Secretaría y Administración General (01, 10)               NaN  \n",
-       "27  Secretaría y Administración General (01, 10)               NaN  \n",
-       "\n",
-       "[6630 rows x 16 columns]"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/josemora/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:5: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "  \"\"\"\n",
+      "/Users/josemora/opt/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:7: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "  import sys\n"
+     ]
     }
    ],
    "source": [
-    "dftotal"
+    "# Valor del dolar extraido del IFP http://www.dipres.gob.cl/598/articles-292283_doc_pdf3.pdf \n",
+    "valor_dolar = 868\n",
+    "\n",
+    "# Se añade la columna con conversión a pesos\n",
+    "dftotal['moneda_nacional_ms'] = pd.to_numeric(dftotal['moneda_nacional_ms'].str.replace('.', ''), errors='coerce')\n",
+    "dftotal['moneda_nacional_ms'] = dftotal['moneda_nacional_ms'].fillna(0)\n",
+    "dftotal['moneda_inter_musd'] = pd.to_numeric(dftotal['moneda_inter_musd'].str.replace('.', ''), errors='coerce')\n",
+    "dftotal['moneda_inter_musd'] = dftotal['moneda_inter_musd'].fillna(0)\n",
+    "dftotal['total_pesos_ms'] = dftotal['moneda_nacional_ms'] + valor_dolar * dftotal['moneda_inter_musd']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
